# agentic_eval_team

./: .gitignore  MANIFEST.in  README.md  main.py  output.json  plan.md  pyproject.toml  requirements.txt
agentic_eval_team/: __init__.py  __main__.py
agentic_eval_team/consensus/: __init__.py  strategies.py
agentic_eval_team/evaluation/: __init__.py  runner.py
agentic_eval_team/models/: mock_model.py  schema.py  worker.py
agentic_eval_team/utils/: errors.py  io.py
samples/: input_sample.json
src/: __init__.py  config.py
src/consensus/: __init__.py  engine.py  strategies.py
src/evaluation/: runner.py
src/models/: __init__.py  manager.py  schema.py  tools.py  worker.py
src/tasks/: __init__.py  prompts.py  router.py
src/utils/: __init__.py  retry.py
tests/: test_core.py
