[project]
name = "agentic-eval-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "smolagents>=1.24.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://mirrors.sustech.edu.cn/pypi/web/simple/"
default = true
