[project]
name = "agentic-eval-team"
version = "0.1.0"
description = "A multi-agent system for evaluating and refining labels on text data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "smolagents>=1.24.0",
    "tqdm>=4.67.3",
]

[project.scripts]
agentic-eval = "agentic_eval_team.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.target]
packages = ["agentic_eval_team"]

[tool.uv]
index = "https://mirrors.sustech.edu.cn/pypi/web/simple/"